social links correction, header__img replaced

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       </svg>
                     </a>
                   </li> -->
-                  <li>
+                  <!-- <li>
                     <a href="https://instagram.com/nattyme/" target="_blank">
                       <object
                         class="svg-inst"
@@ -93,7 +93,7 @@
                         data="./img/socials/instagram.svg"
                       ></object>
                     </a>
-                  </li>
+                  </li> -->
                   <li>
                     <a href="tel:89258260741">
                       <svg class="svg-wa">
@@ -112,11 +112,11 @@
           <!--=====// Мобильная навигация =====-->
 
           <div class="header-top__social">
-            <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
+            <!-- <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
               <svg class="svg-ln">
                 <use href="./img/socials/svgSprite.svg#svg-ln"></use>
               </svg>
-            </a>
+            </a> -->
             <a href="https://github.com/Nattyme" target="_blank">
               <svg class="svg-git">
                 <use href="./img/socials/svgSprite.svg#svg-git"></use>
@@ -226,7 +226,7 @@
                       </svg>
                     </a>
                   </li> -->
-                  <li>
+                  <!-- <li>
                     <a href="https://instagram.com/nattyme/" target="_blank">
                       <object
                         class="svg-inst"
@@ -234,7 +234,7 @@
                         data="./img/socials/instagram.svg"
                       ></object>
                     </a>
-                  </li>
+                  </li> -->
                   <li>
                     <a href="tel:89258260741">
                       <svg class="svg-wa">
@@ -306,7 +306,7 @@
                     <!--// card -->
 
                     <!-- card -->
-                    <div class="portfolio-card mix wp">
+                    <!-- <div class="portfolio-card mix wp">
                         <a class="portfolio-card__img" href="https://nattyme.github.io/Elegance/" target="_blank">
                             <img src="./img/portfolio/elegance-1.jpg" alt="project preview">
                             <span>Смотреть проект</span>
@@ -316,35 +316,7 @@
                             <a class="portfolio-card__title" href="./img/fancybox/elegance-2.jpg" data-fancybox>Верстка “Elegance”</a>
                             <p class="portfolio-card__desc">Верстка лендинга</p>
                         </div>
-                    </div>
-                    <!--// card -->
-
-                    <!-- card -->
-                    <div class="portfolio-card mix html">
-                        <a class="portfolio-card__img" href="https://nattyme.github.io/Freelancer-portfolio-/" target="_blank">
-                            <img src="./img/portfolio/designer-page-1.jpg" alt="project preview">
-                            <span>Смотреть проект</span>
-                        </a>
-
-                        <div class="portfolio-card__text">
-                            <a class="portfolio-card__title" href="./img/fancybox/designer-page-2.jpg" data-fancybox>Верстка “Freelancer-portfolio”</a>
-                            <p class="portfolio-card__desc">Верстка лендинга</p>
-                        </div>
-                    </div>
-                    <!--// card -->
-
-                    <!-- card -->
-                    <div class="portfolio-card mix html wp">
-                        <a class="portfolio-card__img" href="https://nattyme.github.io/Be-Prepared-For-The-Mountains/" target="_blank">
-                            <img src="./img/portfolio/mntn-1.jpg" alt="project preview">
-                            <span>Смотреть проект</span>
-                        </a>
-                        
-                        <div class="portfolio-card__text">
-                            <a class="portfolio-card__title" href="./img/fancybox/mntn-2.jpg" data-fancybox>Верстка “MNTN”</a>
-                            <p class="portfolio-card__desc">Верстка лендинга</p>
-                        </div>
-                    </div>
+                    </div> -->
                     <!--// card -->
                 </div>
                 <!-- cards wrapper -->
@@ -391,7 +363,7 @@
                     <div class="timeline-item__title grad-border">
                     Вы держите руку на пульсе
                     </div>
-                    <p>Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть актуальное состояние проекта и задач.</p>
+                    <p>Выдаю клиенту доступ к GitHub репозиторию. Вы в любое время можете видеть актуальное состояние проекта и задач.</p>
                 </div>
                 <!--// item -->
 
@@ -471,7 +443,7 @@
               <!--// li -->
 
               <!-- li -->
-              <li>
+              <!-- <li>
                 <a href="https://instagram.com/nattyme/" target="_blank">
                   <object
                     class="svg-inst"
@@ -479,7 +451,7 @@
                     data="./img/socials/instagram.svg"
                   ></object>
                 </a>
-              </li>
+              </li> -->
               <!--// li -->
 
               <!-- li -->
