portfolio-card__link added

--- a/index.html
+++ b/index.html
@@ -279,9 +279,11 @@
                 <div class="portfolio__cards" id="mix-cards">
                     <!-- card -->
                     <div class="portfolio-card mix wp">
-                        <a class="portfolio-card__img" href="http://b92582vu.beget.tech/forest-travel/index.html" target="_blank">
-                            <img src="./img/portfolio/forest-1.jpg" alt="project preview">
-                            <span>Смотреть проект</span>
+                        <a class="portfolio-card__link" href="https://nattyme.github.io/forest-travel/" target="_blank">
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/forest-1.jpg" alt="project preview">
+                                <span>Смотреть проект</span>
+                            </div>
                         </a>
 
                         <div class="portfolio-card__text">
@@ -293,9 +295,11 @@
 
                     <!-- card -->
                     <div class="portfolio-card mix html">
-                        <a class="portfolio-card__img" href="https://nattyme.github.io/Unit/?" target="_blank">
-                            <img src="./img/portfolio/unit-1.jpg" alt="project preview">
-                            <span>Смотреть проект</span>
+                        <a class="portfolio-card__link" href="https://nattyme.github.io/Unit/" target="_blank">
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/unit-1.jpg" alt="project preview">
+                                <span>Смотреть проект</span>
+                            </div>
                         </a>
 
                         <div class="portfolio-card__text">
