portfolio__card__link correction

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <li>pixel perfect, полное соответствие макету</li>
                 <li>верстаю с сеткой или без</li>
                 <li>адаптивная верстка под мобильные устройства</li>
-                <li>оптимизация по retina экраны</li>
+                <li>оптимизация под retina экраны</li>
                 <li>с Bootstrap и без него</li>
               </ul>
             </div>
@@ -277,7 +277,7 @@
 
                 <!-- cards wrapper -->
                 <div class="portfolio__cards" id="mix-cards">
-                    <!-- card -->
+                    <!-- big card -->
                     <div class="portfolio-card mix wp">
                         <a class="portfolio-card__link" href="https://nattyme.github.io/forest-travel/" target="_blank">
                             <div class="portfolio-card__img">
@@ -293,7 +293,7 @@
                     </div>
                     <!--// card -->
 
-                    <!-- card -->
+                    <!-- big card -->
                     <div class="portfolio-card mix html">
                         <a class="portfolio-card__link" href="https://nattyme.github.io/Unit/" target="_blank">
                             <div class="portfolio-card__img">
@@ -311,15 +311,18 @@
 
                     <!-- card -->
                     <!-- <div class="portfolio-card mix wp">
-                        <a class="portfolio-card__img" href="https://nattyme.github.io/Elegance/" target="_blank">
-                            <img src="./img/portfolio/elegance-1.jpg" alt="project preview">
-                            <span>Смотреть проект</span>
+                        <a class="portfolio-card__link" href="https://nattyme.github.io/elegance/" target="_blank">
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/elegance-1.jpg" alt="project preview">
+                                <span>Смотреть проект</span>
+                            </div>
                         </a>
 
                         <div class="portfolio-card__text">
                             <a class="portfolio-card__title" href="./img/fancybox/elegance-2.jpg" data-fancybox>Верстка “Elegance”</a>
                             <p class="portfolio-card__desc">Верстка лендинга</p>
                         </div>
+                        
                     </div> -->
                     <!--// card -->
                 </div>
