data of a new project "amid" added

--- a/index.html
+++ b/index.html
@@ -310,20 +310,20 @@
                     <!--// card -->
 
                     <!-- card -->
-                    <!-- <div class="portfolio-card mix wp">
-                        <a class="portfolio-card__link" href="https://nattyme.github.io/elegance/" target="_blank">
+                    <div class="portfolio-card mix wp">
+                        <a class="portfolio-card__link" href="https://nattyme.github.io/amid/" target="_blank">
                             <div class="portfolio-card__img">
-                                <img src="./img/portfolio/elegance-1.jpg" alt="project preview">
+                                <img src="./img/portfolio/amid-1.jpg" alt="project preview">
                                 <span>Смотреть проект</span>
                             </div>
                         </a>
 
                         <div class="portfolio-card__text">
-                            <a class="portfolio-card__title" href="./img/fancybox/elegance-2.jpg" data-fancybox>Верстка “Elegance”</a>
+                            <a class="portfolio-card__title" href="./img/fancybox/amid-2.jpg" data-fancybox>Верстка “Amid”</a>
                             <p class="portfolio-card__desc">Верстка лендинга</p>
                         </div>
                         
-                    </div> -->
+                    </div>
                     <!--// card -->
                 </div>
                 <!-- cards wrapper -->
