cv file , icon cv-svg added

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           <!--=====// Мобильная навигация =====-->
 
           <div class="header-top__social">
-            <!-- <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
-              <svg class="svg-ln">
-                <use href="./img/socials/svgSprite.svg#svg-ln"></use>
+            <a href="./img/header/Наталья Балашова - Верстальщик.pdf"  download="Наталья Балашова - Верстальщик">
+              <svg class="svg-cv">
+                <use href="./img/socials/svgSprite.svg#svg-cv"></use>
               </svg>
-            </a> -->
+            </a>
             <a href="https://github.com/Nattyme" target="_blank">
               <svg class="svg-git">
                 <use href="./img/socials/svgSprite.svg#svg-git"></use>
