project unit link adress correction

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                     <!-- big card -->
                     <div class="portfolio-card mix html">
-                        <a class="portfolio-card__link" href="https://nattyme.github.io/Unit/" target="_blank">
+                        <a class="portfolio-card__link" href="https://nattyme.github.io/unit/" target="_blank">
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/unit-1.jpg" alt="project preview">
                                 <span>Смотреть проект</span>
