socials svg replaced, sprite correction

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <!--=====// Мобильная навигация =====-->
 
           <div class="header-top__social">
-            <a href="./img/header/Наталья Балашова - Верстальщик.pdf"  download="Наталья Балашова - Верстальщик">
+            <a href="./img/header/нб_верстальщик.pdf"  download="Наталья Балашова - Верстальщик">
               <svg class="svg-cv">
                 <use href="./img/socials/svgSprite.svg#svg-cv"></use>
               </svg>
