header-banner img replaced

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
       <!-- banner -->
       <div class="header-banner">
-        <img src="./img/header/header-bg.png" alt="banner">
+        <img src="./img/header/header-bg.jpg" alt="banner">
       </div>
       <!--// banner -->
 
